--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@assets/*":["./src/assets/*"],
+      "@components/*":["./src/components/*"],
+      "@routes/*":["./src/routes/*"],
+      "@screens/*":["./src/screens/*"],
+      "@services/*":["./src/services/*"],
+      "@storage/*":["./src/storage/*"],
+      "@utils/*":["./src/utils/*"],
+    },
     "strict": true
   }
 }
