--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.11",
@@ -20,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-onesignal": "^5.0.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
