--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
-      "@assets/*":["./src/assets/*"],
-      "@components/*":["./src/components/*"],
-      "@routes/*":["./src/routes/*"],
-      "@screens/*":["./src/screens/*"],
-      "@services/*":["./src/services/*"],
-      "@storage/*":["./src/storage/*"],
-      "@utils/*":["./src/utils/*"],
+      "@/*": ["./*"]
     },
     "strict": true
   }
